[project]
name = "joint-travel-time"
version = "0.1.0"
description = "Calculate joint travel times to two destinations instead of just one"
readme = "ReadMe.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "osmnx>=2.1.0",
    "scikit-learn>=1.8.0",
]
